# breezydemo

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  all_my_symbols.c  bt_keyboard.c  bt_keyboard.h  idf_component.yml  main.c  my_console_io.c  my_console_io.h  my_display.c  my_display.h  terminus16.c
